--- a/src/infoBox.css
+++ b/src/infoBox.css
@@ -1,8 +1,21 @@
-.cardContainer {
-    display:flex;
-    justify-content:center;
+.InfoBox{
+    margin-top: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+ 
+}
+.card{
+    display: flex;
+    justify-content: center;
+    
 }
 
-.InfoBox {
-    text-align:center;
+.InfoBox .cardContent {
+    background-color: rgba(0, 0, 0, 0);
+    box-shadow: none;
+}
+.InfoBox.card {
+    background-color: whitesmoke;
+    box-shadow: none;
 }
