--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,19 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  margin: 0px;
+  padding: 0px .5rem;
+  justify-content: center;
+  background-image:url("https://images.unsplash.com/photo-1667878331782-4d4b8486c266?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YmlyZHMlMjBmbHlpbmclMjBpbiUyMHRoZSUyMHNreXxlbnwwfHwwfHx8MA%3D%3D");
+  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.body{
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
+  /* filter: blur(-100px); */
+  /* background-image:url("https://images.unsplash.com/photo-1667878331782-4d4b8486c266?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YmlyZHMlMjBmbHlpbmclMjBpbiUyMHRoZSUyMHNreXxlbnwwfHwwfHx8MA%3D%3D"); */
 }
